hw3/j0gram.output
Terminals unused in grammar

    CASE
    CHAR
    CONTINUE
    DEFAULT
    FLOAT
    INSTANCEOF
    LONG
    SWITCH
    NOT_RESERVED
    CHARACTER_LITERAL
    TYPE_CAST
    CHAR_ERROR
    INT_ERROR
    UNKNOWN
    THEN
    ':'


Grammar

    0 $accept: ClassDecl $end

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody

    2 ClassBody: '{' ClassBodyDecls '}'
    3          | '{' '}'

    4 ClassBodyDecls: ClassBodyDecl
    5               | ClassBodyDecls ClassBodyDecl

    6 ClassBodyDecl: FieldDecl
    7              | MethodDecl
    8              | ConstructorDecl

    9 FieldDecl: Type VarDecls ';'
   10          | Type VarDeclarator '=' Literal ';'

   11 Type: INT
   12     | DOUBLE
   13     | BOOLEAN
   14     | STRING
   15     | Name

   16 Name: IDENTIFIER
   17     | QualifiedName

   18 QualifiedName: Name '.' IDENTIFIER

   19 VarDecls: VarDeclarator
   20         | VarDecls ',' VarDeclarator

   21 VarDeclarator: IDENTIFIER
   22              | VarDeclarator '[' ']'

   23 MethodReturnVal: Type
   24                | VOID

   25 MethodDecl: MethodHeader Block

   26 MethodHeader: PUBLIC STATIC MethodReturnVal MethodDeclarator

   27 MethodDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   28 FormalParmListOpt: FormalParmList
   29                  | %empty

   30 FormalParmList: FormalParm
   31               | FormalParmList ',' FormalParm

   32 FormalParm: Type VarDeclarator

   33 ConstructorDecl: ConstructorDeclarator Block

   34 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   35 ArgListOpt: ArgList
   36           | %empty

   37 Block: '{' BlockStmtsOpt '}'

   38 BlockStmtsOpt: BlockStmts
   39              | %empty

   40 BlockStmts: BlockStmt
   41           | BlockStmts BlockStmt

   42 BlockStmt: LocalVarDeclStmt
   43          | Stmt

   44 LocalVarDeclStmt: LocalVarDecl ';'

   45 LocalVarDecl: Type VarDecls

   46 Stmt: Block
   47     | ';'
   48     | ExprStmt
   49     | BreakStmt
   50     | ReturnStmt
   51     | IfThenStmt
   52     | IfThenElseStmt
   53     | IfThenElseIfStmt
   54     | WhileStmt
   55     | ForStmt

   56 ExprStmt: StmtExpr ';'

   57 StmtExpr: Assignment
   58         | MethodCall
   59         | InstantiationExpr

   60 IfThenStmt: IF '(' Expr ')' Block

   61 IfThenElseStmt: IF '(' Expr ')' Block ELSE Block

   62 IfThenElseIfStmt: IF '(' Expr ')' Block ElseIfSequence
   63                 | IF '(' Expr ')' Block ElseIfSequence ELSE Block

   64 ElseIfSequence: ElseIfStmt
   65               | ElseIfSequence ElseIfStmt

   66 ElseIfStmt: ELSE IfThenStmt

   67 WhileStmt: WHILE '(' Expr ')' Stmt

   68 ForStmt: FOR '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

   69 ForInit: StmtExprList
   70        | LocalVarDecl
   71        | %empty

   72 ExprOpt: Expr
   73        | %empty

   74 ForUpdate: StmtExprList
   75          | %empty

   76 StmtExprList: StmtExpr
   77             | StmtExprList ',' StmtExpr

   78 BreakStmt: BREAK ';'
   79          | BREAK IDENTIFIER ';'

   80 ReturnStmt: RETURN ExprOpt ';'

   81 Primary: Literal
   82        | '(' Expr ')'
   83        | FieldAccess
   84        | MethodCall

   85 Literal: INTEGER_LITERAL
   86        | FLOAT_LITERAL
   87        | BOOLEAN_LITERAL
   88        | STRING_LITERAL
   89        | NULLVAL

   90 InstantiationExpr: NEW Name '(' ArgListOpt ')'

   91 ArgList: Expr
   92        | ArgList ',' Expr

   93 FieldAccess: Primary '.' IDENTIFIER

   94 MethodCall: Name '(' ArgListOpt ')'
   95           | Name '{' ArgListOpt '}'
   96           | Primary '.' IDENTIFIER '(' ArgListOpt ')'
   97           | Primary '.' IDENTIFIER '{' ArgListOpt '}'

   98 PostFixExpr: Primary
   99            | Name

  100 UnaryExpr: '-' UnaryExpr
  101          | '!' UnaryExpr
  102          | PostFixExpr

  103 MulExpr: UnaryExpr
  104        | MulExpr '*' UnaryExpr
  105        | MulExpr '/' UnaryExpr
  106        | MulExpr '%' UnaryExpr

  107 AddExpr: MulExpr
  108        | AddExpr '+' MulExpr
  109        | AddExpr '-' MulExpr

  110 RelOp: LESS_EQUAL
  111      | GREATER_EQUAL
  112      | '<'
  113      | '>'

  114 RelExpr: AddExpr
  115        | RelExpr RelOp AddExpr

  116 EqExpr: RelExpr
  117       | EqExpr EQUAL RelExpr
  118       | EqExpr NOT_EQUAL RelExpr

  119 CondAndExpr: EqExpr
  120            | CondAndExpr LOGIC_AND EqExpr

  121 CondOrExpr: CondAndExpr
  122           | CondOrExpr LOGIC_OR CondAndExpr

  123 Expr: CondOrExpr
  124     | Assignment

  125 Assignment: LeftHandSide AssignOp Expr
  126           | LeftHandSide AssignOp
  127           | Type VarDeclarator AssignOp Expr

  128 LeftHandSide: Name
  129             | FieldAccess

  130 AssignOp: '='
  131         | INCREMENT
  132         | DECREMENT


Terminals, with rules where they appear

    $end (0) 0
    '!' <treeptr> (33) 101
    '%' <treeptr> (37) 106
    '(' <treeptr> (40) 27 34 60 61 62 63 67 68 82 90 94 96
    ')' <treeptr> (41) 27 34 60 61 62 63 67 68 82 90 94 96
    '*' <treeptr> (42) 104
    '+' <treeptr> (43) 108
    ',' <treeptr> (44) 20 31 77 92
    '-' <treeptr> (45) 100 109
    '.' <treeptr> (46) 18 93 96 97
    '/' <treeptr> (47) 105
    ':' <treeptr> (58)
    ';' <treeptr> (59) 9 10 44 47 56 68 78 79 80
    '<' <treeptr> (60) 112
    '=' <treeptr> (61) 10 130
    '>' <treeptr> (62) 113
    '[' <treeptr> (91) 22
    ']' <treeptr> (93) 22
    '{' (123) 2 3 37 95 97
    '}' (125) 2 3 37 95 97
    error (256)
    BREAK <treeptr> (258) 78 79
    DOUBLE <treeptr> (259) 12
    ELSE <treeptr> (260) 61 63 66
    FOR <treeptr> (261) 68
    IF <treeptr> (262) 60 61 62 63
    INT <treeptr> (263) 11
    RETURN <treeptr> (264) 80
    VOID <treeptr> (265) 24
    WHILE <treeptr> (266) 67
    CLASS <treeptr> (267) 1
    STRING <treeptr> (268) 14
    BOOLEAN <treeptr> (269) 13
    CASE <treeptr> (270)
    CHAR <treeptr> (271)
    CONTINUE <treeptr> (272)
    DEFAULT <treeptr> (273)
    FLOAT <treeptr> (274)
    INSTANCEOF <treeptr> (275)
    LONG <treeptr> (276)
    NEW <treeptr> (277) 90
    SWITCH <treeptr> (278)
    NOT_RESERVED <treeptr> (279)
    PUBLIC <treeptr> (280) 1 26
    STATIC <treeptr> (281) 26
    IDENTIFIER <treeptr> (282) 1 16 18 21 27 34 79 93 96 97
    INTEGER_LITERAL <treeptr> (283) 85
    FLOAT_LITERAL <treeptr> (284) 86
    STRING_LITERAL <treeptr> (285) 88
    BOOLEAN_LITERAL <treeptr> (286) 87
    NULLVAL <treeptr> (287) 89
    CHARACTER_LITERAL <treeptr> (288)
    INCREMENT <treeptr> (289) 131
    DECREMENT <treeptr> (290) 132
    TYPE_CAST <treeptr> (291)
    LESS_EQUAL <treeptr> (292) 110
    GREATER_EQUAL <treeptr> (293) 111
    EQUAL <treeptr> (294) 117
    NOT_EQUAL <treeptr> (295) 118
    LOGIC_AND <treeptr> (296) 120
    LOGIC_OR <treeptr> (297) 122
    CHAR_ERROR <treeptr> (298)
    INT_ERROR <treeptr> (299)
    UNKNOWN <treeptr> (300)
    THEN <treeptr> (301)


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    ClassDecl <treeptr> (67)
        on left: 1
        on right: 0
    ClassBody <treeptr> (68)
        on left: 2 3
        on right: 1
    ClassBodyDecls <treeptr> (69)
        on left: 4 5
        on right: 2 5
    ClassBodyDecl <treeptr> (70)
        on left: 6 7 8
        on right: 4 5
    FieldDecl <treeptr> (71)
        on left: 9 10
        on right: 6
    Type <treeptr> (72)
        on left: 11 12 13 14 15
        on right: 9 10 23 32 45 127
    Name <treeptr> (73)
        on left: 16 17
        on right: 15 18 90 94 95 99 128
    QualifiedName <treeptr> (74)
        on left: 18
        on right: 17
    VarDecls <treeptr> (75)
        on left: 19 20
        on right: 9 20 45
    VarDeclarator <treeptr> (76)
        on left: 21 22
        on right: 10 19 20 22 32 127
    MethodReturnVal <treeptr> (77)
        on left: 23 24
        on right: 26
    MethodDecl <treeptr> (78)
        on left: 25
        on right: 7
    MethodHeader <treeptr> (79)
        on left: 26
        on right: 25
    MethodDeclarator <treeptr> (80)
        on left: 27
        on right: 26
    FormalParmListOpt <treeptr> (81)
        on left: 28 29
        on right: 27 34
    FormalParmList <treeptr> (82)
        on left: 30 31
        on right: 28 31
    FormalParm <treeptr> (83)
        on left: 32
        on right: 30 31
    ConstructorDecl <treeptr> (84)
        on left: 33
        on right: 8
    ConstructorDeclarator <treeptr> (85)
        on left: 34
        on right: 33
    ArgListOpt <treeptr> (86)
        on left: 35 36
        on right: 90 94 95 96 97
    Block <treeptr> (87)
        on left: 37
        on right: 25 33 46 60 61 62 63 68
    BlockStmtsOpt <treeptr> (88)
        on left: 38 39
        on right: 37
    BlockStmts <treeptr> (89)
        on left: 40 41
        on right: 38 41
    BlockStmt <treeptr> (90)
        on left: 42 43
        on right: 40 41
    LocalVarDeclStmt <treeptr> (91)
        on left: 44
        on right: 42
    LocalVarDecl <treeptr> (92)
        on left: 45
        on right: 44 70
    Stmt <treeptr> (93)
        on left: 46 47 48 49 50 51 52 53 54 55
        on right: 43 67
    ExprStmt <treeptr> (94)
        on left: 56
        on right: 48
    StmtExpr <treeptr> (95)
        on left: 57 58 59
        on right: 56 76 77
    IfThenStmt <treeptr> (96)
        on left: 60
        on right: 51 66
    IfThenElseStmt <treeptr> (97)
        on left: 61
        on right: 52
    IfThenElseIfStmt <treeptr> (98)
        on left: 62 63
        on right: 53
    ElseIfSequence <treeptr> (99)
        on left: 64 65
        on right: 62 63 65
    ElseIfStmt <treeptr> (100)
        on left: 66
        on right: 64 65
    WhileStmt <treeptr> (101)
        on left: 67
        on right: 54
    ForStmt <treeptr> (102)
        on left: 68
        on right: 55
    ForInit <treeptr> (103)
        on left: 69 70 71
        on right: 68
    ExprOpt <treeptr> (104)
        on left: 72 73
        on right: 68 80
    ForUpdate <treeptr> (105)
        on left: 74 75
        on right: 68
    StmtExprList <treeptr> (106)
        on left: 76 77
        on right: 69 74 77
    BreakStmt <treeptr> (107)
        on left: 78 79
        on right: 49
    ReturnStmt <treeptr> (108)
        on left: 80
        on right: 50
    Primary <treeptr> (109)
        on left: 81 82 83 84
        on right: 93 96 97 98
    Literal <treeptr> (110)
        on left: 85 86 87 88 89
        on right: 10 81
    InstantiationExpr <treeptr> (111)
        on left: 90
        on right: 59
    ArgList <treeptr> (112)
        on left: 91 92
        on right: 35 92
    FieldAccess <treeptr> (113)
        on left: 93
        on right: 83 129
    MethodCall <treeptr> (114)
        on left: 94 95 96 97
        on right: 58 84
    PostFixExpr <treeptr> (115)
        on left: 98 99
        on right: 102
    UnaryExpr <treeptr> (116)
        on left: 100 101 102
        on right: 100 101 103 104 105 106
    MulExpr <treeptr> (117)
        on left: 103 104 105 106
        on right: 104 105 106 107 108 109
    AddExpr <treeptr> (118)
        on left: 107 108 109
        on right: 108 109 114 115
    RelOp <treeptr> (119)
        on left: 110 111 112 113
        on right: 115
    RelExpr <treeptr> (120)
        on left: 114 115
        on right: 115 116 117 118
    EqExpr <treeptr> (121)
        on left: 116 117 118
        on right: 117 118 119 120
    CondAndExpr <treeptr> (122)
        on left: 119 120
        on right: 120 121 122
    CondOrExpr <treeptr> (123)
        on left: 121 122
        on right: 122 123
    Expr <treeptr> (124)
        on left: 123 124
        on right: 60 61 62 63 67 72 82 91 92 125 127
    Assignment <treeptr> (125)
        on left: 125 126 127
        on right: 57 124
    LeftHandSide <treeptr> (126)
        on left: 128 129
        on right: 125 126
    AssignOp <treeptr> (127)
        on left: 130 131 132
        on right: 125 126 127


State 0

    0 $accept: . ClassDecl $end

    PUBLIC  shift, and go to state 1

    ClassDecl  go to state 2


State 1

    1 ClassDecl: PUBLIC . CLASS IDENTIFIER ClassBody

    CLASS  shift, and go to state 3


State 2

    0 $accept: ClassDecl . $end

    $end  shift, and go to state 4


State 3

    1 ClassDecl: PUBLIC CLASS . IDENTIFIER ClassBody

    IDENTIFIER  shift, and go to state 5


State 4

    0 $accept: ClassDecl $end .

    $default  accept


State 5

    1 ClassDecl: PUBLIC CLASS IDENTIFIER . ClassBody

    '{'  shift, and go to state 6

    ClassBody  go to state 7


State 6

    2 ClassBody: '{' . ClassBodyDecls '}'
    3          | '{' . '}'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 10
    BOOLEAN     shift, and go to state 11
    PUBLIC      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    '}'         shift, and go to state 14

    ClassBodyDecls         go to state 15
    ClassBodyDecl          go to state 16
    FieldDecl              go to state 17
    Type                   go to state 18
    Name                   go to state 19
    QualifiedName          go to state 20
    MethodDecl             go to state 21
    MethodHeader           go to state 22
    ConstructorDecl        go to state 23
    ConstructorDeclarator  go to state 24


State 7

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody .

    $default  reduce using rule 1 (ClassDecl)


State 8

   12 Type: DOUBLE .

    $default  reduce using rule 12 (Type)


State 9

   11 Type: INT .

    $default  reduce using rule 11 (Type)


State 10

   14 Type: STRING .

    $default  reduce using rule 14 (Type)


State 11

   13 Type: BOOLEAN .

    $default  reduce using rule 13 (Type)


State 12

   26 MethodHeader: PUBLIC . STATIC MethodReturnVal MethodDeclarator

    STATIC  shift, and go to state 25


State 13

   16 Name: IDENTIFIER .
   34 ConstructorDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 26

    $default  reduce using rule 16 (Name)


State 14

    3 ClassBody: '{' '}' .

    $default  reduce using rule 3 (ClassBody)


State 15

    2 ClassBody: '{' ClassBodyDecls . '}'
    5 ClassBodyDecls: ClassBodyDecls . ClassBodyDecl

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 10
    BOOLEAN     shift, and go to state 11
    PUBLIC      shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    '}'         shift, and go to state 27

    ClassBodyDecl          go to state 28
    FieldDecl              go to state 17
    Type                   go to state 18
    Name                   go to state 19
    QualifiedName          go to state 20
    MethodDecl             go to state 21
    MethodHeader           go to state 22
    ConstructorDecl        go to state 23
    ConstructorDeclarator  go to state 24


State 16

    4 ClassBodyDecls: ClassBodyDecl .

    $default  reduce using rule 4 (ClassBodyDecls)


State 17

    6 ClassBodyDecl: FieldDecl .

    $default  reduce using rule 6 (ClassBodyDecl)


State 18

    9 FieldDecl: Type . VarDecls ';'
   10          | Type . VarDeclarator '=' Literal ';'

    IDENTIFIER  shift, and go to state 29

    VarDecls       go to state 30
    VarDeclarator  go to state 31


State 19

   15 Type: Name .
   18 QualifiedName: Name . '.' IDENTIFIER

    '.'  shift, and go to state 32

    $default  reduce using rule 15 (Type)


State 20

   17 Name: QualifiedName .

    $default  reduce using rule 17 (Name)


State 21

    7 ClassBodyDecl: MethodDecl .

    $default  reduce using rule 7 (ClassBodyDecl)


State 22

   25 MethodDecl: MethodHeader . Block

    '{'  shift, and go to state 33

    Block  go to state 34


State 23
